[tool.poetry]
name = "tagic"
version = "1.0.2"
description = "Build html / xhtml with a nice syntax."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
readme = "README.md"
homepage = "https://github.com/tammoippen/tagic"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.283"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-randomly = "^3.13.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["B", "BLE", "C", "E", "F", "PL", "Q", "RUF", "T", "W", "I"]

[tool.ruff.per-file-ignores]
"**/tests/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["tagic"]

[tool.mypy]
files = "src/"
mypy_path = "src/"
namespace_packages = true
explicit_package_bases = true

warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
allow_redefinition = true
local_partial_types = true
warn_unreachable = true
disallow_any_unimported = true

[tool.pytest.ini_options]
addopts = """\
    --cov=src \
    --cov-report term-missing \
    --cov-branch \
    -vvv \
    -s \
    """
